Archive2/9b/e0cee42162a473/output
main.cpp:20:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:26:10: error: 'clrscr' was not declared in this scope
   clrscr();
          ^
main.cpp:31:13: error: 'delay' was not declared in this scope
    delay(100);
             ^
main.cpp:115:14: error: 'getch' was not declared in this scope
        getch();
              ^
main.cpp:127:22: warning: format '%c' expects argument of type 'char*', but argument 2 has type 'int' [-Wformat=]
        scanf("%c",ans);
                      ^
main.cpp: In function 'void Board()':
main.cpp:134:15: error: 'clrscr' was not declared in this scope
        clrscr();
               ^
main.cpp:170:8: error: a function-definition is not allowed here before '{' token
        {
        ^
main.cpp:307:8: error: expected '}' at end of input
        } /*End of Code */
        ^
bash: line 7: ./a.out: No such file or directory
